<resources>
    <string name="app_name">ShadaJobs</string>
    <string name="log">כניסה כ:</string>
    <string name="Worker">Worker</string>
    <string name="Employer">Employer</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_employer_list">EmployerList</string>
    <string name="Age">AGE:</string>
    <string name="MyAge">my age</string>
    <string name="city">City</string>
    <string name="work">work</string>
    <string name="location">location</string>
    <string name="company">company</string>
    <string name="age">age</string>
    <string name="title_activity_main_list2">MainList2Activity</string>
    <string name="City">City</string>
    <string name="Save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Name">Name</string>
    <string name="EnterYourName">Enter Your Name</string>
    <string name="EnterYourAge">Enter Your Age</string>
    <string name="EnterYourAge1">Enter Your Age</string>
    <string name="Phone">Phone</string>
    <string name="EnterYourAge2">Enter Your Age</string>
    <string name="EnterYourPhone">Enter Your Phone</string>
    <string name="Save1">Save</string>
    <string name="Email" />
    <string name="Name1">Name</string>
    <string name="Name2">Name</string>
    <string name="Email1">Email</string>
    <string name="Password">Password</string>
    <string name="title_activity_employer_list2">EmployerList2</string>
    <string name="job">type of work</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="minimumAge">Minimum Age</string>
</resources>
